@@ -12,6 +12,11 @@
 #include "_mingw_mac.h"
 #include "_mingw_secapi.h"
 
+/* Include _cygwin.h if we're building a Cygwin application. */
+#ifdef __CYGWIN__
+#include "_cygwin.h"
+#endif
+
 /* C/C++ specific language defines.  */
 #ifdef _WIN64
 #ifdef __stdcall
@@ -242,7 +247,7 @@ typedef int __int128 __attribute__ ((__mode__ (TI)));
 #endif /* __cplusplus */
 #endif /* __GNUC__ */
 
-#ifndef _WIN32
+#if !defined(_WIN32) && !defined(__CYGWIN__)
 #error Only Win32 target is supported!
 #endif
 
