@@ -6,10 +6,6 @@
 #ifndef _INC_VADEFS
 #define _INC_VADEFS
 
-#ifndef _WIN32
-#error Only Win32 target is supported!
-#endif
-
 #include <_mingw.h>
 
 #ifndef __WIDL__
